<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/latitudeLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="true"
        android:text="@string/latitude_longitude_label"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeLongitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:includeFontPadding="true"
        android:text="@string/address_label"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/systemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:breakStrategy="balanced"
        android:fontFamily="@font/aclonica"
        android:includeFontPadding="true"
        android:text="@string/time_label"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weatherCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/systemTime"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/default_center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/weatherInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/weather_info_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/cardTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/temperature_label"
                android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
                android:textColor="@color/cardTextColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/humidity_label"
                android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
                android:textColor="@color/cardTextColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/weather_description_label"
                android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
                android:textColor="@color/cardTextColor"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>







